--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -190,7 +190,7 @@ main .form-submit-wrapper .button {
   border-radius: 34px;
   display: inline;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 60px;
   padding: 16px 50px;
   background-color: #fff;
   border:1.5px solid #313131;
@@ -364,7 +364,7 @@ main [class^="iti__arrow"] {
 main .contact-us-section h1{
   text-align: center;
   font-size:36px;
-  padding: 39px 0px 10px 0px;
+  padding: 39px 0px 0px 0px;
   font-weight: 400;
   color:#313131;
 }
