--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,7 +149,7 @@ main .why-us a {
   border-radius: 34px;
   display: table;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 0px;
   margin-bottom: 50px;
   padding: 16px 34.5px;
   background-color: #fff;
@@ -179,13 +179,15 @@ main .online-orders h5 > a {
   border-radius: 34px;
   display: table;
   margin: 0 auto;
-  margin-top: 85px;
+  margin-top: 0px;
   padding: 16px 38.5px;
   background-color: #fff;
   border:1.5px solid #313131;
   text-decoration: none;
   font-family: var(--alt-font-family);
 }
+
+
 main .online-orders h5 > a:hover{
   background-color: #313131;
   color:#fff;
@@ -215,8 +217,8 @@ main .onlineordercta h5 > a {
   border-radius: 34px;
   display: table;
   margin: 0 auto;
-  margin-top: 110px;
-  margin-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 60px;
   padding: 16px 24px;
   background-color: #fff;
   border:1.5px solid #313131;
@@ -237,6 +239,22 @@ main .onlinecta h5 > a{
   background-color: #fff;
   border:1.5px solid #313131;
   text-decoration: none;
+}
+
+main .onlinetable h5 > a{
+  text-align: center;
+  font-size: 15px;
+  color: #313131;
+  font-weight: 600;
+  border-radius: 34px;
+  display: table;
+  margin: 0 auto;
+  margin-top: 2px;
+  margin-bottom: 92px;
+  padding: 16px 38.5px;
+  background-color: #fff;
+  border:1.5px solid #313131;
+  text-decoration: none;2
 }
 
 main .member-subscriptions h5 > a:hover{
@@ -433,6 +451,13 @@ main .world-class-cutomer-loyality .cards ul > li p a {
   color:#fff;
 }
 
+main .customer-journey-section h2{
+  text-align: center;
+  margin-top: 71px;
+  font-size: 36px;
+  margin-bottom: 50px;
+}
+
 main .related-case-studies-component .cards ul > li p a {
   font-size: 15px;
   font-family: var(--alt-font-family);
@@ -508,7 +533,7 @@ main .text-wrapped > picture img{
 
 main .online-orders h1 {
   text-align: center;
-  font-size: 48px;
+  font-size: 36px;
   padding-top: 0;
   display: flex;
   justify-content: center;
@@ -581,6 +606,7 @@ main .job-description-page h2 {
   text-align: center;
   font-size: 28px;
   margin-bottom: 0;
+  margin-top:-13px;
 }
 
 main .clientele-page h2 {
@@ -606,7 +632,7 @@ main .online-orders h2 {
 
 main .job-description-page:last-child h2 {
   text-align: center;
-  font-size: 28px;
+  font-size: 36px;
   margin-bottom: 0;
   font-weight: bold;
   font-family: var(--heading-font-family);
@@ -888,13 +914,17 @@ main .support-services p {
 
 main .online-orders p {
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 300;
 }
 
 main .online-orders.member-subscriptions {
   padding: 0;
   text-align: center;
+}
+
+main .online-orders .default-content-wrapper h1{
+  margin-top:-13px;
 }
 
 main .online-order-logo-section p {
@@ -993,9 +1023,13 @@ main .support-services p{
 }
 
 main .support-services .default-content-wrapper h2{
-  margin-top:7px;
+  margin-top:4px;
   text-align: center;
 }
+
+/* main .support-services .default-content-wrapper{
+  margin:0px 0px 40px 0px
+} */
 
 main .support-services p{
   padding-bottom: 0px;
@@ -1176,6 +1210,16 @@ main .form {
   main .section {
     padding: 64px 32px;
     padding-bottom: 20px;
+  }
+
+  main .futuristic-product h2{
+    font-size: 36px;
+    text-align: center;
+    margin-top:35px;
+  }
+
+  main .futuristic-product .default-content-wrapper{
+    margin-bottom: -30px;
   }
 
   main .privacy-section p a,
@@ -1371,11 +1415,40 @@ main .form {
     margin: 58px 0px 90px 0px;
   }
 
+  main .job-description-page .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 43px 0px 40px 0px;
+  }
+
+
+
+  main .online-orders .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 58px 0px 45px 0px;
+  }
+
+  main .onlinetable .default-content-wrapper{
+    margin-top:-31px;
+  }
+
+
+
+  main .onlineordercta .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 58px 0px 0px 0px;
+  }
+
   main .why-us .default-content-wrapper h5 {
     font-size: 15px;
     font-weight: 200;
     text-align: left;
-    margin: 58px 0px 47px 0px;
+    margin: 46px 0px 76px 0px;
   }
 
   main .carve-career-all-section .default-content-wrapper h5 {
@@ -1563,6 +1636,7 @@ main .form {
     color:#313131;
     font-size:36px;
     font-weight: 400;
+    text-align: center;
 
   }
 
@@ -1822,6 +1896,27 @@ main .customer-journey-section .new-image-set h3 {
   font-size: 18px;
   padding-left: 25px;
   margin-top: 20px;
+}
+
+main .restaurants-logo h4{
+  text-align: center;
+  font-size: 36px;
+  margin-top:55px;
+  margin-bottom: 15px;
+}
+
+main .table-container .default-content-wrapper h1{
+  font-size: 36px;
+  margin-top:-23px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+main .table-container .default-content-wrapper h5{
+  font-size: 18px;
+        font-weight: 200;
+        text-align: left;
+        text-align: center;
+        margin:60px auto;
 }
 
 main .customer-journey-section .new-image-set {
